My sprint-challenge-project

--- a/index.html
+++ b/index.html
@@ -12,17 +12,39 @@
 </head>
 
 <body>
+    <header>
+	    <section class = "lambda">
+			<img src = "img/lambda-black.png">
+		</section>
+		<section class = "links">
+		<nav>
+		    <a href = "#">Home</a>
+			<a href = "#">About</a>
+			<a href = "#">Products</a>
+			<a href = "#">Blog</a>
+			<a href = "#">Contact</a>
+		</nav>
+		</section>
+	</header>
+	<header class = "jumbo">
+	    <section class = "jumbo">
+		<img src = "img/jumbo.jpg">
+		</section>
+	</header>
     <div class="container">
-   
+        
         <section class="top-content">
-            <div class="text-container">
+            <section class="text-container">
+			<span>
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
-            </div>
-            <div class="text-container">
+            </span>
+            <section class="text-container">
+			<span>
                 <h2>The Past</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
-            </div>
+            </span>
+			</section>
         </section>
         
         <section class="middle-content">
