My user-interface sprint challenge update
The "index.html" and "index.css" files that I worked on yesterday for the sprint challenge.

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <section class="boxes">
-                <li class="box">Box 1</li>
-                <li class="box two">Box 2</li>
-                <li class="box three">Box 3</li>
-                <li class="box four">Box 4</section>
-                <li class="box five">Box 5</li>
-                <li class="box six">Box 6</sectin>
-                <li class="box seven">Box 7</li>
-                <li class="box eight">Box 8</li>
-                <li class="box nine">Box 9</li>
-                <li class="box ten">Box 10</li>
+                <section class="box">Box 1</section>
+                <section class="box two">Box 2</section>
+                <section class="box three">Box 3</section>
+                <section class="box four">Box 4</section>
+                <section class="box five">Box 5</section>
+                <section class="box six">Box 6</section>
+                <section class="box seven">Box 7</section>
+                <section class="box eight">Box 8</section>
+                <section class="box nine">Box 9</section>
+                <section class="box ten">Box 10</section>
             </section>
            </section>
         </section>
